# role-play

./: .gitignore  README.md  config.toml  pyproject.toml  roles.json
src/: main.py  tts.py
src/core/: config.py  settings.py
src/domain/chat/: asr.py  session.py  tts.py
src/domain/role/: models.py
src/utils/: s3.py
templates/: chat.html
