[project]
name = "role-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi[standard]>=0.117.1",
    "faster-whisper>=1.2.0",
    "jinja2>=3.1.6",
    "openai>=1.108.1",
    "pydantic-settings>=2.11.0",
    "qiniu>=7.17.0",
    "websockets>=15.0.1",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[dependency-groups]
dev = ["pytest"]
lint = ["mypy", "ruff", "types-passlib"]

[tool.mypy]
mypy_path = ["src"]
ignore_missing_imports = true
